# ndsi_fsc_calibration

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: grid_conf_example.yaml
data/aoi_files/: alpes_bbox.dbf  alpes_bbox.shp  alpes_bbox.shx  dolomites.geojson
notebooks/: example_usage.ipynb
scripts/: launch.sh  main.py
src/ndsi_fsc_calibration/: __init__.py  download.py  fit_linear_model.py  launch.py  launch_test.py  match.py  regrid.py  snow_cover_products.py  utils.py  visualization.py
