[project]
name = "ndsi_fsc_calibration"
version = "0.1.0"
description = "Calibrate a linear model for Normalized Snow Index (NDSI) to Fractional Snow Cover (FSC) for moderate resolution sensors using Sentinel-2 as high resolution reference"
authors = [
    {name = "Nicola Imperatore", email = "nicola.imperatore@meteo.fr"},
]
dependencies = [
    "xarray>=2024.7.0",
    "dask>=2024.8.0",
    "netCDF4>=1.7.2",
    "bottleneck>=1.5.0",
    "rioxarray>=0.15.0",
    "geopandas>=1.1.2",
    "scikit-learn>=1.7.2",
    "geospatial_grid @ git+ssh://git@github.com/nicolaimpe/geospatial_grid@0.1.0",
    "pyhdf>=0.11.6",
    "earthaccess>=0.14.0",
    "py-hydroweb>=1.1.0",
    ]
    
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
